# ai-math-testsuite

./: .build-instructions  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Codex-environment  README.md  autogen.sh
docs/: gitache-submodule-integration.md
gitache/: CMakeLists.txt  README.md  gateway.cmake
gitache-core/: README.md  main.cmake  updater.cmake
src/: CMakeLists.txt  FloatingPointRoundOffError.h  Halley_iterations.cxx  IEEE754_test.cxx  basis_test.cxx  bracket_zero_test.cxx  convergence_test.cxx  cubic_epsilons.cxx  cubic_roots2.cxx  epsilon_sums.cxx  eta_correlation.cxx  hello_cga.cxx  k-face_tests.cxx  linear_algebra_test.cxx  math_geometry_tests.cxx  math_hyperblock_tests.cxx  math_hyperplane_tests.cxx  minus_three_case.cxx  newton_epsilons.cxx  print_roots.cxx  product_interval.cpp  random_cubics.cxx  random_cubics2.cxx  roots_test.cxx  versor_test.cxx
